@@ -2,6 +2,8 @@
 
 AUTOMAKE_OPTIONS = foreign subdir-objects
 
+ACLOCAL_AMFLAGS = -I m4
+
 SUBDIRS = include testsuite man
 
 EXTRA_DIST = LICENSE ChangeLog.v1 ChangeLog.libgcj configure.host	\
@@ -40,7 +42,8 @@ EXTRA_DIST = LICENSE ChangeLog.v1 ChangeLog.libgcj configure.host	\
 	 m4/ltversion.m4 src/arm/gentramp.sh src/debug.c msvcc.sh	\
 	generate-ios-source-and-headers.py				\
 	 generate-osx-source-and-headers.py				\
-	 libffi.xcodeproj/project.pbxproj src/arm/trampoline.S
+	 libffi.xcodeproj/project.pbxproj src/arm/trampoline.S          \
+        libtool-ldflags
 
 info_TEXINFOS = doc/libffi.texi
 
